# ihela-pyhton-client

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  README.rst  examples.py  requirements.in  requirements.txt  setup.cfg  setup.py
django/: views.py
docs/: README.rst  index.rst
ihela_client/: __init__.py  client.py  merchant_authorization.py  merchant_client.py  settings.py
