[metadata]
name = ihela-python-client
version = 0.0.1
description = A Python high level client for accessing iHela APIs.
long_description = file: README.rst
url = https://ihela.online/
author = Pierre-Claver Koko Banywerha
author_email = pierreclaverkoko@gmail.com
license = MIT  # Example license
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: